# donut-rs

./: .gitignore  Cargo.toml  debug.sh  pubspec.yaml  readme.md
.donut_runtime/presets/: example.donutpreset
.github/workflows/: build.yml  test.yml
android/app/: build.gradle
integration_test/: simple_test.dart
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/blocks/: controls.dart  debug.dart  keyboard.dart  midi_select.dart
lib/modules/: saturator.dart  tensions.dart  waveshaper.dart  wavetable.dart
lib/providers/: debug.dart  dispatch.dart  keyboard.dart  midi.dart  playback.dart  synth.dart
lib/ui/: knob.dart  parameter.dart
linux/: CMakeLists.txt  my_application.cc
linux/flutter/: generated_plugins.cmake
macos/Runner.xcodeproj/: project.pbxproj
rust/: Cargo.toml
rust/rust_lib_donut.xcodeproj/: project.pbxproj
rust/rust_lib_donut.xcodeproj/xcuserdata/layetri.xcuserdatad/xcschemes/: xcschememanagement.plist
rust/src/: frb_generated.rs  lib.rs
rust/src/api/: commands.rs  mod.rs  simple.rs  ui.rs
rust/src/dsp/: buffer.rs  fft.rs  filter.rs  filter_delay_line.rs  mod.rs
rust/src/effects/: mod.rs  saturator.rs  vocoder.rs
rust/src/engine/: clock.rs  engine.rs  midi.rs  mod.rs  synthesis.rs  voice.rs
rust/src/engine/audio/: engine.rs  handler.rs  manager.rs  mod.rs
rust/src/generators/: mod.rs  sequencer.rs
rust/src/models/: mfcc.rs
rust/src/sources/: granular.rs  mod.rs  sampler.rs  sine.rs  tensions.rs  waveshaper.rs  wavetable.rs
rust/src/system/: dev.rs  library.rs  mod.rs  parameter.rs  util.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/ios/: rust_lib_donut.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_donut.podspec
rust_builder/windows/: CMakeLists.txt
src/: main.rs
src/dsp/: add_and_divide.rs  allpass.rs  biquad.rs  buffer.rs  comb.rs  delay_line.rs  highpass.rs  mod.rs  util.rs
src/effects/: mod.rs  reverb.rs
src/engine/: audio.rs  clock.rs  midi.rs  mod.rs  note_handler.rs  synthesis.rs  voice.rs
src/generators/: mod.rs  sequencer.rs
src/gui/: controls.rs  devtools.rs  midi.rs  mixer.rs  mod.rs  startup.rs  status.rs
src/models/: mod.rs
src/modulators/: adsr.rs  mod.rs
src/sources/: mod.rs  sine.rs  tensions.rs  waveshaper.rs  wavetable.rs
src/system/: dev.rs  library.rs  mod.rs  parameter.rs  preset.rs  util.rs
web/: index.html
windows/flutter/: generated_plugins.cmake
windows/runner/: Runner.rc
(+16 files in other folders)
