[package]
name = "donut-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
serde = {version = "1.0.160", features = ["derive"]}
serde_json = "1.0.96"

cpal = "0.15.2"
rosc = "0.10.1"
midir = "0.9.1"