[package]
name = "donut-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
serde = {version = "1.0.160", features = ["derive"]}
serde_json = "1.0.96"

cpal = "0.15.2"
rosc = "0.10.1"
midir = "0.9.1"
num-traits = "0.2.19"
rustfft = "6.2.0"
apodize = "1.0.0"
rsworld = "0.1.0"
makima_spline = "1.1.3"
smallvec = "1.13.2"
uuid = { version = "1.10.0", features = ["v4"] }
homedir = "0.3.3"
