[package]
name = "rust_lib_donut"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.1.0"

anyhow = "1.0.70"
serde = { version = "1.0.194", features = ["derive"] }
serde_json = "1.0.96"

cpal = "0.15.3"
rosc = "0.10.1"
midir = "0.9.1"
num-traits = "0.2.19"
rustfft = {version = "6.2.0"}
apodize = "1.0.0"
rsworld = "0.1.0"
makima_spline = "1.1.3"
smallvec = "1.13.2"
uuid = { version = "1.10.0", features = ["v4"] }
homedir = "0.3.3"
#mfcc = "0.1.0"
bincode = "1.3.3"
hound = "3.5.1"
rubato = "0.15.0"
rsworld-sys = "0.1.0"
tqdm = "0.7.0"
lazy_static = "1.5.0"
coreaudio-sys = "0.2.15"
# serde-wasm-bindgen = "0.6.5"
# getrandom = {version = "0.2.15", features = ["js"]}
cc = "1.0.103"
chrono = { version = "0.4.38", features = ["serde"] }

[build-dependencies]
